# sharpening_wing

./: .gitignore  LICENSE  LICENSE.md  README.md
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
src/: waypoints.txt  waypoints_yc.txt
src/moveit_solid_robot/: CMakeLists.txt
src/moveit_solid_robot/config/: fake_controllers.yaml  gazebo_solid_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  solid_robot.srdf  stomp_planning.yaml
src/moveit_solid_robot/launch/: chomp_planning_pipeline.launch.xml  cutter.launch  default_warehouse_db.launch  demo.launch  demo_cutter.launch  demo_solid.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  solid.launch  stomp_planning_pipeline.launch.xml
src/moveit_solid_robot/src/: inv_waypoints.txt  inv_waypoints_yc.txt  inverter.py  merged_df.txt  rotator.py  tokenizer.py  trajectory_1.cpp  trajectory_2.cpp  trajectory_3.cpp  trajectory_4.cpp  unirotator.py  waypoints.txt  waypoints_yc.txt  wing_sheet_fixed.csv
src/moveit_solid_robot/worlds/: cutte_world.world  cutter.stl  stone_world_v1.world
src/moveit_solid_robot/worlds/cutter_sim/: model.config  model.sdf
src/solid_robot/: CMakeLists.txt
(+110 files in other folders)
